<resources>
    <string name="app_name">NavHomework</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop">Shop</string>
    <string name="sale">Sale</string>
    <string name="basket">Basket</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
</resources>