<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/mainFragment"
        android:icon="@drawable/baseline_add_shopping_cart_24"
        android:title="@string/shop"/>

    <item android:id="@+id/salesFragment"
        android:icon="@drawable/baseline_point_of_sale_24"
        android:title="@string/sale"/>

    <item android:id="@+id/basketFragment"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/basket"/>

    <item android:id="@+id/accountFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/account"/>

    <item android:id="@+id/settingsFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"/>

</menu>